2002-10-20  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: update for 0.4.3.

	* doc/gtetrinet.6: document the keybind changes.

	* src/Makefile.am: use AM_CPPFLAGS, not CPPFLAGS.

2002-10-20  Jordi Mallach  <jordi@sindominio.net>

	* Patches from James Antill with the following fixes.
	* src/fields.c (fields_page_contents): change the attack/defense
	box's minimum size, to avoid message wraps as much as possible.
	* src/gtetrinet.c (keypress): check for modifier states.
	(gtetrinet_key): change the toggle page keybinds from F1, F2 and F3
	to Alt+1,2,3. The previous ones were normally captured by window
	managers.
	* src/misc.c (textbox_addtext): add continue in next:.
	* src/misc.h: define colours for attack/defense messages...
	* src/tetrinet.c (tetrinet_dospecial): ... and use them here,
	depending on to whom affects the special and its type.
	(tetrinet_addspecial): Fix the random order of added special blocks
	when the player just has one.
	Shorten attack/defense messages.

2002-10-19  Jordi Mallach  <jordi@sindominio.net>

	* Patch from Cougar <cougar@random.ee> which adds IPv6 support.
	* configure.in: add --enable-ipv6 option.
	* src/client.c: add support to ipv6 connections using getaddrinfo() &
	friends.

2002-10-18  Jordi Mallach  <jordi@sindominio.net>

	* src/client.c: tidy spacing between copyright header and code.
	* src/keys.c: likewise.
	* src/misc.c: likewise.
	* src/sound.c: likewise.
	* src/tetris.c: likewise.

	* src/commands.c: include "../config.h".
	* src/commands.h: remove include.
	* src/config.c: include "../config.h".
	* src/dialogs.c: include "../config.h". CList header i18n fixes.
	* src/fields.c: include "../config.h".
	* src/gtetrinet.c: likewise.
	* src/partyline.c: likewise.
	* src/tetrinet.c: likewise.
	* src/winlist.c: likewise.

2002-10-17  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, configure.in: released gtetrinet 0.4.2.

2002-10-17  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: update for 0.4.2.
