@@ -17,6 +17,10 @@
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
+#ifdef HAVE_CONFIG_H
+# include "../config.h"
+#endif
+
 #include <stdio.h>
 #include <string.h>
 #include <unistd.h>
