@@ -17,7 +17,9 @@
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-#include "../config.h"
+#ifdef HAVE_CONFIG_H
+# include "../config.h"
+#endif
 
 #include <gtk/gtk.h>
 #include <gnome.h>
